@@ -22,13 +22,13 @@ grails.project.dependency.resolution = {
         //mavenRepo "http://repository.codehaus.org"
         //mavenRepo "http://download.java.net/maven/2/"
         //mavenRepo "http://repository.jboss.com/maven2/"
-        mavenRepo "http://morphia.googlecode.com/svn/mavenrepo/" 
+        mavenRepo "http://morphia.googlecode.com/svn/mavenrepo/"
     }
     dependencies {
         // specify dependencies here under either 'build', 'compile', 'runtime', 'test' or 'provided' scopes eg.
         // runtime 'mysql:mysql-connector-java:5.1.5'
-        runtime 'com.google.code.morphia:morphia:0.96'
-        runtime 'com.google.code.morphia:logging-slf4j:0.96'
+        runtime 'com.google.code.morphia:morphia:0.97'
+        runtime 'com.google.code.morphia:logging-slf4j:0.97'
     }
 
 }
