@@ -28,7 +28,7 @@ class Task {
 
   static indexes = {
     idx_date unique:true, dropDups:true, fields:[asc('dateCreated'), desc('lastUpdated')]
-    idx_project fields:[both('projectId'), 'startDate'] // if direction is omitted, asc is default
+    idx_project fields:[desc('projectId'), 'startDate'] // if direction is omitted, asc is default
   }
 
   static constraints = {
